tests/fixtures/invalid/sorted_3_args.py
# sorted() takes at most 1 argument, got 3
x = sorted(1, 1, 1)
